# agentic-medical-panel

./: README.md  env.example  main.py  pyproject.toml
templates/: dr_challenger.jinja2  dr_checklist.jinja2  dr_decision_maker.jinja2  dr_hypothesis.jinja2  dr_stewardship.jinja2  dr_test_chooser.jinja2
utils/: log.py  template_manager.py
